--- a/start.html
+++ b/start.html
@@ -13,7 +13,7 @@
         text-align: center;
       }
       body {
-        background-image: url(imgs/タイトル.png);
+        background-image: url(タイトル.png);
       }
       #popup {
         margin-top: 100px;
@@ -98,11 +98,11 @@
     <br /><br />
 
     <div id="gamestart">
-      <img src="imgs/スタート.png" alt="スタート" />
+      <img src="スタート.png" alt="スタート" />
     </div>
 
     <div id="doui" onclick="location.href='index.html'">
-      <img src="imgs/同意する.png" alt="同意する" />
+      <img src="同意する.png" alt="同意する" />
     </div>
 
     <script src="start.js"></script>
