--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       }
       body {
         height: 844px;
-        background-image: url(imgs/背景.png);
+        background-image: url(背景.png);
       }
       hr {
         margin-left: 0;
@@ -36,7 +36,7 @@
         padding-top: 15px;
         width: 58px;
         height: 36px;
-        background-image: url(imgs/tokei.png);
+        background-image: url(tokei.png);
       }
       /* .timer img {
         width: 30px;
@@ -94,14 +94,14 @@
     <!-- 遊び方を問題の部分に表示させてはじまり、スタートボタンとともに問題1がスタートする -->
 
     <div class="timer">
-      <!-- <img src="imgs/tokei.png" alt="time" /> -->
+      <!-- <img src="tokei.png" alt="time" /> -->
       <span id="default">time</span>
       <hr id="line" />
     </div>
     <!-- ↑タイマー -->
     <div id="backimg">
       <span id="quiz"> </span>
-      <img id="quizsrc" src="imgs/遊び方.png" alt="問題" />
+      <img id="quizsrc" src="遊び方.png" alt="問題" />
     </div>
 
     <input id="kaitou" type="text" name="ans" placeholder="入力" />
@@ -109,11 +109,11 @@
     <!-- <br /> -->
     <div id="STARTGR">
       <div id="start">
-        <img src="imgs/むずかしい.png" alt="むずかしい" />
+        <img src="むずかしい.png" alt="むずかしい" />
       </div>
       <p>小学生以下のみご利用できます↓</p>
       <div id="kids">
-        <img src="imgs/かんたん.png" alt="かんたん" />
+        <img src="かんたん.png" alt="かんたん" />
       </div>
     </div>
     <br />
@@ -121,7 +121,7 @@
     <br />
     <br />
     <div id="kaitoubtn">
-      <img src="imgs/回答.png" alt="回答" />
+      <img src="回答.png" alt="回答" />
     </div>
     <p id="result"></p>
 
