--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=390px, initial-scale=1.0" />
-    <title>game</title>
+    <title>MUCHU2024　榎並ゼミ</title>
     <style>
       * {
         margin: 0;
@@ -13,7 +13,7 @@
         text-align: center;
       }
       body {
-        height: 844px;
+        height: 800px;
         background-image: url(背景.png);
       }
       hr {
