--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       <img src="スタート.png" alt="スタート" />
     </div>
 
-    <div id="doui" onclick="location.href='index.html'">
+    <div id="doui" onclick="location.href='game.html'">
       <img src="同意する.png" alt="同意する" />
     </div>
 
