--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
         margin-top: 530px;
         /* font-size: xx-large; */
       }
+      #gamestart img{
+        width: 250px;
+      }
     </style>
   </head>
   <body>
