--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       #doui {
         display: none;
         position: absolute;
-        bottom: 10%;
+        bottom: 8%;
         font-size: xx-large;
         color: white;
         /* width: 300px; */
@@ -51,11 +51,12 @@
         /* background-color: aliceblue; */
         text-align: center;
       }
+      
       #gamestart {
         margin-top: 530px;
         /* font-size: xx-large; */
       }
-      #gamestart img{
+      #gamestart img,#doui img{
         width: 290px;
       }
     </style>
