--- a/game.html
+++ b/game.html
@@ -27,10 +27,10 @@
         margin-left: 20px;
         margin-top: 25px;
       }
-      /* #start img,
+      #start img,
       #kids img {
-        width: 300px;
-      } */
+        width: 250px;
+      } 
       #default {
         /* color: black; */
         padding-top: 15px;
