--- a/game.html
+++ b/game.html
@@ -37,6 +37,7 @@
         width: 58px;
         height: 36px;
         background-image: url(tokei.png);
+        background-repeat: no-repeat;
       }
       /* .timer img {
         width: 30px;
