--- a/game.html
+++ b/game.html
@@ -82,13 +82,13 @@
         /* color: black; */
         width: 360px;
       }
-      /* #STARTGR {
-        
-        margin-top: 2px;
-      } */
-      /* #STARTGR p {
-        color: black;
-      } */
+     #result {
+        display: none;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+      }
     </style>
   </head>
   <body>
@@ -124,7 +124,7 @@
     <div id="kaitoubtn">
       <img src="回答.png" alt="回答" />
     </div>
-    <p id="result"></p>
+    <p id="result"><img src="imgs/maruma-ku-illust3.png" id="resultimg" /></p>
 
     <script src="script.js"></script>
   </body>
