--- a/game.html
+++ b/game.html
@@ -124,7 +124,7 @@
     <div id="kaitoubtn">
       <img src="回答.png" alt="回答" />
     </div>
-    <p id="result"><img src="imgs/maruma-ku-illust3.png" id="resultimg" /></p>
+    <p id="result"><img src="maruma-ku-illust3.png" id="resultimg" /></p>
 
     <script src="script.js"></script>
   </body>
