--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         text-align: center;
       }
       body {
-        background-image: url(タイトル.png);
+        background-image: url(宝の地図.png);
       }
       #popup {
         margin-top: 100px;
