--- a/clear.html
+++ b/clear.html
@@ -14,7 +14,7 @@
     </style>
   </head>
   <body>
-    <img src="ゲーム成功1.png" alt="" />
+    <img src="ゲーム成功大人.png" alt="clear" />
     <!-- <p>gameclear!</p> -->
   </body>
 </html>
