--- a/clear.html
+++ b/clear.html
@@ -11,10 +11,13 @@
         /* background-color: rgb(0, 0, 0); */
         color: white;
       }
+       body {
+        background-image: url(ゲーム成功大人.png);
+      }
     </style>
   </head>
   <body>
-    <img src="ゲーム成功大人.png" alt="clear" />
+   <br>
     <!-- <p>gameclear!</p> -->
   </body>
 </html>
