--- a/clear.html
+++ b/clear.html
@@ -11,13 +11,13 @@
         /* background-color: rgb(0, 0, 0); */
         color: white;
       }
-       body {
-        background-image: url(ゲーム成功大人.png);
-      }
+     //  body {
+     //   background-image: url(ゲーム成功大人.png);
+     // }
     </style>
   </head>
   <body>
-   <br>
+   <img src="ゲーム成功大人.png" alt="clear" />
     <!-- <p>gameclear!</p> -->
   </body>
 </html>
