--- a/kidsclear.html
+++ b/kidsclear.html
@@ -11,13 +11,11 @@
         /* background-color: rgb(0, 0, 0); */
         color: white;
       }
-      body{
-        background-image: url(ゲーム成功子供.png);
-      }
+      
     </style>
   </head>
   <body>
-   <br>
+    <img src="ゲーム成功子供.png" alt="clear" />
     <!-- <p>gameclear!</p> -->
   </body>
 </html>
