--- a/index.html
+++ b/index.html
@@ -60,6 +60,15 @@
         width: 290px;
       }
     </style>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-06RRD8B20F"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-06RRD8B20F');
+</script>
   </head>
   <body>
     <!-- <h1>タイトル</h1> -->
