--- a/game.html
+++ b/game.html
@@ -39,9 +39,6 @@
         background-image: url(tokei.png);
         background-repeat: no-repeat;
       }
-      /* .timer img {
-        width: 30px;
-      } */
       .timer {
         /* background: none; */
         width: 300px;
@@ -90,6 +87,15 @@
         transform: translate(-50%, -50%);
       }
     </style>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-06RRD8B20F"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-06RRD8B20F');
+</script>
   </head>
   <body>
     <!-- 遊び方を問題の部分に表示させてはじまり、スタートボタンとともに問題1がスタートする -->
