--- a/clear.html
+++ b/clear.html
@@ -15,6 +15,15 @@
      //   background-image: url(ゲーム成功大人.png);
      // }
     </style>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-06RRD8B20F"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-06RRD8B20F');
+</script>
   </head>
   <body>
    <img src="ゲーム成功大人.png" alt="clear" />
