--- a/kidsclear.html
+++ b/kidsclear.html
@@ -13,6 +13,15 @@
       }
       
     </style>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-06RRD8B20F"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-06RRD8B20F');
+</script>
   </head>
   <body>
     <img src="ゲーム成功子供.png" alt="clear" />
