--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         text-align: center;
       }
       body {
-        background-image: url(タイトル.png);
+        background-image: url(トップ画面.png);
+        background-size: cover;
       }
       #popup {
         margin-top: 100px;
