--- a/clear.html
+++ b/clear.html
@@ -11,9 +11,10 @@
         /* background-color: rgb(0, 0, 0); */
         color: white;
       }
-     //  body {
-     //   background-image: url(ゲーム成功大人.png);
-     // }
+       body {
+        background-image: url(ゲーム成功大人.png);
+       background-size: cover;
+      }
     </style>
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-06RRD8B20F"></script>
@@ -26,7 +27,9 @@
 </script>
   </head>
   <body>
-   <img src="ゲーム成功大人.png" alt="clear" />
+    
+   //<img src="ゲーム成功大人.png" alt="clear" />
+    <br>
     <!-- <p>gameclear!</p> -->
   </body>
 </html>
