--- a/kidsclear.html
+++ b/kidsclear.html
@@ -11,6 +11,11 @@
         /* background-color: rgb(0, 0, 0); */
         color: white;
       }
+      body{
+        background-image: url(ゲーム成功子供.png);
+        background-repeat: no-repeat;
+        background-size: cover;
+      }
       
     </style>
     <!-- Google tag (gtag.js) -->
@@ -24,7 +29,8 @@
 </script>
   </head>
   <body>
-    <img src="ゲーム成功子供.png" alt="clear" />
+    //<img src="ゲーム成功子供.png" alt="clear" />
+    <br>
     <!-- <p>gameclear!</p> -->
   </body>
 </html>
