--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       }
       body {
         background-image: url(トップ画面.png);
+        background-position: center center;
         background-repeat: no-repeat;
         background-size: cover;
       }
