--- a/clear.html
+++ b/clear.html
@@ -13,6 +13,7 @@
       }
        body {
         background-image: url(ゲーム成功大人.png);
+         background-position: center center;
          background-repeat: no-repeat;
        background-size: cover;
       }
