--- a/kidsclear.html
+++ b/kidsclear.html
@@ -13,6 +13,7 @@
       }
       body{
         background-image: url(ゲーム成功子供.png);
+        background-position: center center;
         background-repeat: no-repeat;
         background-size: cover;
       }
@@ -29,7 +30,7 @@
 </script>
   </head>
   <body>
-    //<img src="ゲーム成功子供.png" alt="clear" />
+   
     <br>
     <!-- <p>gameclear!</p> -->
   </body>
