--- a/kidsclear.html
+++ b/kidsclear.html
@@ -12,10 +12,11 @@
         color: white;
       }
       body{
-        background-image: url(ゲーム成功子供.png);
-        background-position: center center;
-        background-repeat: no-repeat;
+        //background-image: url(ゲーム成功子供.png);
+        //background-position: center center;
+        //background-repeat: no-repeat;
         background-size: cover;
+        
       }
       
     </style>
@@ -31,7 +32,7 @@
   </head>
   <body>
    
-    <br>
+    <img src="ゲーム成功子供.png" alt="Game Clear!" />
     <!-- <p>gameclear!</p> -->
   </body>
 </html>
