--- a/clear.html
+++ b/clear.html
@@ -12,9 +12,9 @@
         color: white;
       }
        body {
-        background-image: url(ゲーム成功大人.png);
-         background-position: center center;
-         background-repeat: no-repeat;
+       // background-image: url(ゲーム成功大人.png);
+       //  background-position: center center;
+       //  background-repeat: no-repeat;
        background-size: cover;
       }
     </style>
@@ -29,7 +29,7 @@
 </script>
   </head>
   <body>
-    <br>
+    <img src="ゲーム成功大人.png" alt="Game Clear!" />
     <!-- <p>gameclear!</p> -->
   </body>
 </html>
