--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
       * {
         margin: 0;
-        width: 390px;
+        /*width: 390px;*/
         /* background-color: rgb(0, 0, 0); */
         color: white;
         text-align: center;
