--- a/kidsclear.html
+++ b/kidsclear.html
@@ -12,9 +12,9 @@
         color: white;
       }
       body{
-        //background-image: url(ゲーム成功子供.png);
-        //background-position: center center;
-        //background-repeat: no-repeat;
+        /*background-image: url(ゲーム成功子供.png);
+        background-position: center center;
+        background-repeat: no-repeat;*/
         background-size: cover;
         
       }
