--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       }
       body{
          margin: 0;
+        padding-right: 0;
         
         background-image: url(トップ画面.png);
         background-repeat: no-repeat;
