--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         padding-right: 0;
         
         background-image: url(トップ画面.png);
-        background-repeat: no-repeat;
+       /* background-repeat: no-repeat;*/
         background-size: cover;
       }
        
