--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         padding-right: 0;
         
         background-image: url(トップ画面.png);
+        background-position: center;
        /* background-repeat: no-repeat;*/
         background-size: cover;
       }
