--- a/kidsclear.html
+++ b/kidsclear.html
@@ -7,14 +7,14 @@
     <style>
       * {
         margin: 0;
-        width: 390px;
+        /*width: 390px;*/
         /* background-color: rgb(0, 0, 0); */
         color: white;
       }
       body{
-        /*background-image: url(ゲーム成功子供.png);
-        background-position: center center;
-        background-repeat: no-repeat;*/
+        background-image: url(ゲーム成功子供.png);
+        /*background-position: center;*/
+        background-repeat: no-repeat;
         background-size: cover;
         
       }
@@ -32,7 +32,7 @@
   </head>
   <body>
    
-    <img src="ゲーム成功子供.png" alt="Game Clear!" />
+    /*<img src="ゲーム成功子供.png" alt="Game Clear!" />*/
     <!-- <p>gameclear!</p> -->
   </body>
 </html>
