--- a/kidsclear.html
+++ b/kidsclear.html
@@ -7,7 +7,7 @@
     <style>
       * {
         margin: 0;
-        /*width: 390px;*/
+        width: 400px;
         /* background-color: rgb(0, 0, 0); */
         color: white;
       }
