--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         padding-right: 0;
         
         background-image: url(トップ画面.png);
-        background-position: center;
-       /* background-repeat: no-repeat;*/
+       /* background-position: center;
+        background-repeat: no-repeat;*/
         background-size: cover;
       }
        
