--- a/kidsclear.html
+++ b/kidsclear.html
@@ -7,7 +7,8 @@
     <style>
       * {
         margin: 0;
-        width: 400px;
+        /*width: 400px;*/
+        max-width: 100%;
         /* background-color: rgb(0, 0, 0); */
         color: white;
       }
