--- a/clear.html
+++ b/clear.html
@@ -7,7 +7,9 @@
     <style>
       * {
         margin: 0;
-        width: 390px;
+        /*width: 390px;*/
+         
+        max-width: 100%;
         /* background-color: rgb(0, 0, 0); */
         color: white;
       }
