--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         margin: 0;
         /*width: 390px;*/
         min-width: 390px;
+        max-width: 100%;
         /* background-color: rgb(0, 0, 0); */
         color: white;
         text-align: center;
@@ -29,10 +30,11 @@
       #popup {
         margin-top: 100px;
         margin-left: 35px;
+        margin-right: 35px;
         border: 1px;
         display: none;
         /* background-color: rgb(113, 113, 113); */
-        width: 320px;
+        width: 300px;
         height: 450px;
         /* margin: auto; */
         overflow: scroll;
