--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         bottom: 5%;
         font-size: xx-large;
         color: white;
-        /* width: 300px; */
+         max-width: 290px; 
         /* margin-top: 200px; */
         /* background-color: aliceblue; */
         text-align: center;
