--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
       
       #popup {
         margin-top: 100px;
-        margin-left: 35px;
-        margin-right: 35px;
+        /*margin-left: 35px;
+        margin-right: 35px;*/
+        margin: 0;
         border: 1px;
         display: none;
         /* background-color: rgb(113, 113, 113); */
