--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
        
       
       #popup {
-        margin-top: 100px;
-        /*margin-left: 35px;
+        /*margin-top: 100px;
+        margin-left: 35px;
         margin-right: 35px;*/
-        margin: 0;
+        margin: 100px 0 0 0;
         border: 1px;
         display: none;
         /* background-color: rgb(113, 113, 113); */
