--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         /*margin-top: 100px;
         margin-left: 35px;
         margin-right: 35px;*/
-        margin: 0 auto;
+        margin: 100px auto;
         border: 1px;
         display: none;
         /* background-color: rgb(113, 113, 113); */
