--- a/clear.html
+++ b/clear.html
@@ -10,14 +10,18 @@
         /*width: 390px;*/
          
         max-width: 100%;
-        /* background-color: rgb(0, 0, 0); */
-        color: white;
+        /* background-color: rgb(0, 0, 0); 
+        color: white; */
       }
        body {
        /* background-image: url(ゲーム成功大人.png);
          background-position: center center;
          background-repeat: no-repeat; */
        background-size: cover;
+      }
+      p{
+        position: absolute;
+        bottom: 5%;
       }
     </style>
     <!-- Google tag (gtag.js) -->
