--- a/clear.html
+++ b/clear.html
@@ -36,7 +36,7 @@
   </head>
   <body>
     <img src="ゲーム成功大人.png" alt="Game Clear!" />
-    <p>https://www.instagram.com/muchu_mukogawa?igsh=cWNxNHUwMHppazF4 </p>
+    <a href="https://www.instagram.com/muchu_mukogawa?igsh=cWNxNHUwMHppazF4"> </a>
     <!-- <p>gameclear!</p> -->
   </body>
 </html>
