--- a/clear.html
+++ b/clear.html
@@ -19,9 +19,11 @@
          background-repeat: no-repeat; */
        background-size: cover;
       }
-      p{
+      a {
         position: absolute;
-        bottom: 2%;
+        transform: translate(-50%, -50%);
+        left: 50%;
+        top: 99.9%;
       }
     </style>
     <!-- Google tag (gtag.js) -->
@@ -35,8 +37,11 @@
 </script>
   </head>
   <body>
+    <a href="https://www.instagram.com/muchu_mukogawa?igsh=cWNxNHUwMHppazF4">
+      MUCHU Instagram >>
+    </a>
     <img src="ゲーム成功大人.png" alt="Game Clear!" />
-    <a href="https://www.instagram.com/muchu_mukogawa?igsh=cWNxNHUwMHppazF4"> </a>
+    
     <!-- <p>gameclear!</p> -->
   </body>
 </html>
