--- a/clear.html
+++ b/clear.html
@@ -23,7 +23,7 @@
         position: absolute;
         transform: translate(-50%, -50%);
         left: 50%;
-        top: 99.9%;
+        bottom: 1%;
       }
     </style>
     <!-- Google tag (gtag.js) -->
