--- a/clear.html
+++ b/clear.html
@@ -23,7 +23,8 @@
         position: absolute;
         transform: translate(-50%, -50%);
         left: 50%;
-        bottom: 1%;
+        height: 20px;
+        bottom: 0%;
       }
     </style>
     <!-- Google tag (gtag.js) -->
