--- a/clear.html
+++ b/clear.html
@@ -23,8 +23,9 @@
         position: absolute;
         transform: translate(-50%, -50%);
         left: 50%;
-        height: 20px;
-        bottom: 0%;
+        height: 50px;
+        top: 50px;
+       
       }
     </style>
     <!-- Google tag (gtag.js) -->
