--- a/kidsclear.html
+++ b/kidsclear.html
@@ -13,8 +13,8 @@
         color: white;
       }
       body{
-        background-image: url(ゲーム成功子供.png);
-        /*background-position: center;*/
+        /*background-image: url(ゲーム成功子供.png);
+        background-position: center;*/
         background-repeat: no-repeat;
         background-size: cover;
         
@@ -42,7 +42,7 @@
    <a href="https://www.instagram.com/muchu_mukogawa?igsh=cWNxNHUwMHppazF4">
       MUCHU Instagram >>
     </a>
-    /*<img src="ゲーム成功子供.png" alt="Game Clear!" />*/
+    <img src="ゲーム成功子供.png" alt="Game Clear!" />
     <!-- <p>gameclear!</p> -->
   </body>
 </html>
