--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         margin: 100px auto;
         border: 1px;
         display: none;
-        /* background-color: rgb(113, 113, 113); */
-        width: 280px;
+        /* background-color: rgb(113, 113, 113); 
+        width: 280px;*/
         height: 450px;
         /* margin: auto; */
         overflow: scroll;
