--- a/kidsclear.html
+++ b/kidsclear.html
@@ -13,7 +13,7 @@
         
       }
       body{
-        /*background-image: url(ゲーム成功子供.png);
+        /*background-image: url(ゲーム成功子供2.png);
         background-position: center;*/
         background-repeat: no-repeat;
         background-size: cover;
