--- a/kidsclear.html
+++ b/kidsclear.html
@@ -42,7 +42,7 @@
    <a href="https://www.instagram.com/muchu_mukogawa?igsh=cWNxNHUwMHppazF4">
       MUCHU Instagram >>
     </a>
-    <img src="ゲーム成功子供.png" alt="Game Clear!" />
+    <img src="ゲーム成功子供2.png" alt="Game Clear!" />
     <!-- <p>gameclear!</p> -->
   </body>
 </html>
