--- a/camerademo.html
+++ b/camerademo.html
@@ -29,7 +29,7 @@ video {
   </head>
   <body>
     <div class="camera-container">
-      <video id="video" autoplay></video>
+      <video id="video" autoplay muted playsinline></video>
       <div class="guide-frame"></div>
     </div>
     <button id="capture">撮影</button>
