--- a/gameover.html
+++ b/gameover.html
@@ -14,6 +14,8 @@
     </style>
   </head>
   <body>
-    <p>gameover</p>
+    /*<p>gameover</p>*/
+    <img src="ゲームオーバー子供.png" alt="Game over" />
+    
   </body>
 </html>
