--- a/camerademo.html
+++ b/camerademo.html
@@ -27,7 +27,9 @@ video {
   aspect-ratio: 5 / 4;
   pointer-events: none; /* ガイド枠がクリックを妨げないようにする */
 }
-
+#photo {
+        height: 200px;
+      }
    </style>
   </head>
   <body>
