--- a/camerademo.html
+++ b/camerademo.html
@@ -45,7 +45,7 @@
     <div class="camera-container">
       <video id="video" autoplay muted playsinline></video>
       <div>
-        <img class="guide-frame" src="Tシャツアイコン7.png" alt="ガイド" />
+        <img class="guide-frame" src="maruma-ku-illust3.png" alt="ガイド" />
       </div>
     </div>
     <button id="capture">撮影</button>
